Fix word-wrap of event cards

--- a/client/assets/stylesheets/style.scss
+++ b/client/assets/stylesheets/style.scss
@@ -805,6 +805,10 @@ button:focus-visible {
         box-shadow: 5px 10px 10px rgb(64 0 0 / 20%);
         background-color: white;
         border-radius: 10px;
+
+        & > * {
+          word-wrap: break-word;
+        }
       }
     }
 
